--- a/API/package.json
+++ b/API/package.json
@@ -4,7 +4,7 @@
   "description": "Backend en Mongo y express",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon ./index.js"
   },
   "author": "Javier Lozano",
   "license": "ISC",
