--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,9 @@ yarn-debug.log*
 yarn-error.log*
 lerna-debug.log*
 
+# production
+/build
+
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
@@ -45,6 +48,9 @@ build/Release
 # Dependency directories
 node_modules/
 jspm_packages/
+/.pnp
+.pnp.js
+
 
 # TypeScript v1 declaration files
 typings/
@@ -110,5 +116,16 @@ dist
 
 # Stores VSCode versions used for testing VSCode extensions
 .vscode-test
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
 # End of https://www.toptal.com/developers/gitignore/api/node
