--- a/.gitignore
+++ b/.gitignore
@@ -120,8 +120,10 @@ dist
 # misc
 .DS_Store
 .env.local
+.env.development
 .env.development.local
 .env.test.local
+.env.production
 .env.production.local
 
 npm-debug.log*
